# Nail

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Procfile  README.md  blog_posts  build_website.sh  example.nail  example.rs  nail_language_flow.puml  nail_language_spec.md  run_blog.sh  run_blog_direct.sh  run_blog_routes.sh  run_comprehensive_tests.sh  run_debug.sh  run_simple_blog.sh  run_website.sh  rustfmt.toml  start.sh  test.sh  test_all_stages.sh  test_array_int.nail  test_array_int.rs  test_bug.sh  test_debug_parse.nail  test_exact_match.nail  test_exact_match.rs  test_field_access_simple.nail  test_field_access_simple.rs  test_lexer_parser.sh  test_nested_error.nail  test_nested_error.rs  test_result_fix.nail  test_result_fix.rs  test_rust_compilation.sh  test_transpiler.sh  test_type_checker.sh
examples/: adventure_game.nail  adventure_game.nail.backup  adventure_game.rs  adventure_game_final.nail  adventure_game_final.rs  adventure_game_reduce.nail  adventure_game_reduce.rs  adventure_game_simple.nail  adventure_game_with_loop.rs  array_test.nail  array_test.rs  blog.nail  blog_example_corrected.nail  blog_example_corrected.rs  blog_simple.nail  blog_with_files.nail  blog_with_files.rs  build  calculator.nail  colorization_test.nail  colorizer_test.nail  data_processing.nail  debug_array.nail  debug_array.rs  debug_test.nail  debug_test.rs  demo.nail  demo.rs  demo_all_stdlib.nail  demo_all_stdlib.rs  final_array_test.nail  final_array_test.rs  final_demo.nail  func_test.nail  func_test.rs  functional_demo.nail  functional_demo.rs  game_stats.nail  game_stats.rs  grug_test_math.nail  (+126 more)
nail_website_server/: Cargo.toml
scripts/: build_for_render.sh  test_build_locally.sh
src/: checker.rs  colorizer.rs  common.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  statics_for_tests.rs  stdlib_registry.rs  stdlib_types.rs  test_boolean_step_by_step.rs  transpilier.rs  utils.rs
test_render_build/: Cargo.toml
test_render_build/src/: main.rs
tests/: colorization_test.nail  colorizer_test.nail  debug_lambda.nail  debug_test.nail  (+130 more)
(+70 files in other folders)
