[package]
name = "nail-website"
version = "0.1.0"
edition = "2021"

[dependencies]
nail = { path = ".." }
rayon = "1.10.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dashmap = "6.1.0"
